--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html >
 <head>
   <meta charset="utf-8">
-  <title>HelloWorld</title>
+  <title>Lorenzo M Vredeveld</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
